--- a/Web3Introduction/package.json
+++ b/Web3Introduction/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "embark": "^3.2.3",
+    "ipfs-api": "^26.1.2",
     "web3": "^1.0.0-beta.36"
   }
 }
