--- a/Web3Introduction/package.json
+++ b/Web3Introduction/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "embark": "^3.2.3",
     "ipfs-api": "^26.1.2",
+    "randomstring": "^1.1.5",
     "web3": "^1.0.0-beta.36"
   }
 }
